Fix .btn-group wrapping by flex-flow: wrap (#24111)

--- a/scss/_button-group.scss
+++ b/scss/_button-group.scss
@@ -5,7 +5,7 @@
 .btn-group-vertical {
   position: relative;
   display: inline-flex;
-  flex-flow: row wrap;
+  flex-flow: wrap;
   vertical-align: middle; // match .btn alignment given font-size hack above
 
   > .btn {
